--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --red: #C1554E;
     --grey: #E4E4E4;
     --black: #020027;
-    --heading: #282c43;
+    --blue: #222252;
     --white: #ffffff;
     --text: #6b6e73;
     --border: #d6d8d9;
@@ -14,7 +14,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins Regular';
-    color: var(--heading);
+    color: var(--black);
 
 }
 
@@ -142,7 +142,7 @@ main {
 }
 
 .main-nav>ul>li.active a {
-    border-bottom: 1px solid var(--heading);
+    border-bottom: 1px solid var(--blue);
 }
 
 .main-nav {
@@ -211,7 +211,7 @@ main {
 }
 
 .page-header {
-    background: var(--heading);
+    background: var(--blue);
     color: var(--white);
     text-align: center;
     padding: .5rem .5rem .5rem 1rem;
@@ -268,7 +268,7 @@ main {
 }
 
 .btn-s.black-s {
-    background: var(--heading);
+    background: var(--blue);
 }
 
 .btn-s.black-s:hover {
@@ -276,12 +276,12 @@ main {
 }
 
 .btn-s.red-s:hover {
-    background: var(--heading);
+    background: var(--blue);
 }
 
 .page-header .btn-s:hover {
     background: var(--white);
-    color: var(--heading);
+    color: var(--blue);
 }
 
 .header-bar>span {
@@ -299,7 +299,7 @@ main {
 }
 
 .top-actions button {
-    background: var(--heading-light);
+    background: var(--blue-light);
     border: none;
     padding: 6px 12px;
     color: var(--white);
@@ -376,6 +376,12 @@ table th {
     border-radius: 4px;
     border: 1px solid var(--border);
     outline: none;
+}
+
+.not-found {
+    padding: 2rem;
+    text-align: center;
+    font-weight: 600;
 }
 
 .table-filter select {
