--- a/style.css
+++ b/style.css
@@ -369,9 +369,10 @@ table th {
     color: var(--link);
 }
 
-.table-filter input,
-.table-filter select,
-.search-bar input {
+textarea,
+input,
+select,
+input {
     padding: .4rem .6rem;
     border-radius: 4px;
     border: 1px solid var(--border);
@@ -413,4 +414,94 @@ table th {
 
 button.btn-s.red-s-black:hover {
     background: var(--black);
+}
+
+.formula-table {
+    background: var(--yellow);
+}
+
+.markups {
+    display: flex;
+    padding: 1rem 0;
+    gap: 1rem;
+}
+
+
+.markups>* {
+    width: 50%;
+}
+
+.markups>textarea:first-child {
+    width: 80% !important;
+}
+
+.search-agent textarea {
+    width: 100%;
+    min-height: 200px;
+    display: block;
+}
+
+.search-agent .search-wrap,
+.search-agent .search-wrap input {
+    width: 100%;
+}
+
+.search-agent .search-bar {
+    padding-top: 0;
+}
+
+table.tb-mr,
+table.markup-dates {
+
+    margin: 1rem 0;
+}
+
+.markup-dates tbody {
+    width: 100%;
+
+}
+
+.d-flex {
+    display: flex;
+    gap: 1rem;
+}
+
+.item-center {
+    align-items: center;
+}
+
+.select-markups {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    max-width: 800px;
+}
+
+.select-markups input,
+.select-markups textarea {
+    width: 100%;
+}
+
+.select-markups label {
+    min-width: 262px;
+}
+
+.j-center {
+    justify-content: center;
+}
+
+.mt {
+    margin-top: 1rem;
+}
+
+input[type="checkbox"] {
+    accent-color: var(--black);
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+}
+
+input[type="checkbox"]+label {
+    cursor: pointer;
 }
